http://bugs.sakaiproject.org/jira/browse/SAK-4178
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@9158 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -7,6 +7,7 @@ profile_department=Department
 profile_school=School
 profile_room=Room
 profile_picture=Picture
+profile_picture_alt=Picture of
 profile_picture_url=Picture URL
 profile_university_id=Use University ID Picture
 profile_keep_picture_url =picture_url
@@ -71,7 +72,7 @@ info_required=means it is required information.
 
 search_for_profile=Search for Profile
 search=Search
-search_msg=Search for a User Profile by entering the user's name (e.g. last name) or Network ID (e.g. jsmith).
+search_msg=Search:
 name_or_network=Name or Network ID:
 no_users_matching=No users matching '
 were_found=' were found.
@@ -82,7 +83,11 @@ alt_official_id_photo_unavailable=No Official ID photo is Available
 alt_picture=User selected picture url
 alt_picture_unavailable=No photo available
 alt_table2summary=tabular representation of searched profiles by lastname or username
-
+alt_select10=Select 10 items
+alt_select20=Select 20 items 
+alt_select30=Select 30 items 
+alt_select40=Select 40 items 
+alt_select50=Select 50 items  
 alt_search_result1=Display first set of results
 alt_search_result2=Display previous set of results
 alt_search_result3=Select number of seach result displayed per page
@@ -92,7 +97,7 @@ alt_search_result5=Display last set of results
 
 permission_exception=Please login to view your profile
 search_table=table to display search links
-display_profileDisplay Profile
+display_profile=Display Profile
 
 user_not_logged_in = User not logged in
-java.search_keyword = Search Keyword
+java.search_keyword = Last name or ID
