SAK-4495: French Canadian translation updates
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@10138 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_fr_CA.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_fr_CA.properties
@@ -17,6 +17,16 @@ alt_search_result4 = Afficher la s\u00E9rie de r\u00E9sultats suivants
 
 alt_search_result5 = Afficher la derni\u00E8re s\u00E9rie de r\u00E9sultats
 
+alt_select10 = S\u00E9lectionner 10 items
+
+alt_select20 = S\u00E9lectionner 20 items
+
+alt_select30 = S\u00E9lectionner 30 items
+
+alt_select40 = S\u00E9lectionner 40 items
+
+alt_select50 = S\u00E9lectionner 50 items
+
 alt_table2summary = repr\u00E9sentation en tableau des profils recherch\u00E9s par nom de famille ou nom d'utilisateur
 
 bar_back = retour
@@ -42,6 +52,8 @@ bar_search = Recherche
 cancel = Annuler
 
 continue = Continuer
+
+display_profile = Afficher le Profil
 
 edit_pic_preference = S\u00E9lectionnez la pr\u00E9f\u00E9rence de photo d'identification
 
@@ -110,6 +122,8 @@ profile_nick_name = Pseudonyme
 profile_other_information = Autre
 
 profile_picture = Photo
+
+profile_picture_alt = Photo de
 
 profile_picture_url = URL de la photo
 
