--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
@@ -1,103 +1,90 @@
-profile = Profile
-profile_first_name = First Name
-profile_last_name = Last Name
-profile_nick_name = Nickname
-profile_position = Position
-profile_department = Department
-profile_school = School
-profile_room = Room
-profile_picture = Picture
-profile_picture_alt = Picture of
-profile_picture_url = Picture URL
-profile_university_id = Use University ID Picture
-profile_keep_picture_url = picture_url
-profile_keep_university_id = UniversityID
-profile_email = Email
-profile_homepage = Home Page
-profile_work_phone = Work Phone
-profile_home_phone = Home Phone
-profile_other_information = Other
-profile_faculty = Faculty
-profile_student = Student
-profile_guest = Guest
-profile_viewable_by = Viewable by those of follwing roles
-profile_main_title = My Profile
-
-profile_edit = Edit my Profile
-profile_edit_title = My Profile
-profile_show = Show my Profile
-profile_hide_entire = Hide my	entire Profile
-profile_hide_personal = Hide only my Personal Information
-edit_pic_preference = Choose picture id preference
-edit_pic_preference_url = Use Picture URL :
-edit_pic_preference_univ = Use University Id Picture
-edit_pic_preference_none = None
-
-title_bar = Contact Information Editor
-title_list = List
-title_read = Read
-title_edit = Edit
-title_delete = Delete
-title_entry = Entry
-title_public_info = Public Information
-title_protected_info = Protected Information
-title_personal_info = Personal Information
-
-toolbar_delete = delete
-toolbar_edit = edit
-toolbar_new = new
-
-bar_search = Search
-bar_delete = delete
-bar_cancel = Cancel
-bar_save = Save
-bar_new = new
-bar_edit = edit
-bar_back = back
-bar_post = Post
-bar_preview = Preview
-bar_save_draft = Save Draft
-
-continue = Continue
-cancel = Cancel
-
-no_profile_msg = Please edit your Profile first. (You have empty First Name or Last Name)
+profile = Perfil
+profile_first_name = Nom
+profile_last_name = Cognom
+profile_nick_name = Sobrenom
+profile_position = Posició
+profile_department = Departament
+profile_school = Facultat
+profile_room = Sala
+profile_picture = Imatge
+profile_picture_alt = Imatge de
+profile_picture_url = URL de la imatge
+profile_university_id = Usar imatge d'identificació de la Universitat
+profile_keep_picture_url = imatge_url
+profile_keep_university_id = IdentificadorUniversitat
+profile_email = Correu electrònic
+profile_homepage = Pàgina Inicial
+profile_work_phone = Telèfon Feina
+profile_home_phone = Telèfon Casa
+profile_other_information = Altres
+profile_faculty = Facultat
+profile_student = Estudiant
+profile_guest = Visitant
+profile_viewable_by = Visualitzable per tots els rols següents
+profile_main_title = El Meu Perfil
+profile_edit = Editar El Meu Perfil
+profile_edit_title = El Meu Perfil
+profile_show = Mostrar El Meu Perfil
+profile_hide_entire = Ocultar tot El Meu Perfil
+profile_hide_personal = Ocultar només la Informació Personal
+edit_pic_preference = Triar imatge d'identificació preferent
+edit_pic_preference_url = Usar URL d'imatge:
+edit_pic_preference_univ = Usar imatge d'identificació de la Universitat
+edit_pic_preference_none = Cap
+title_bar = Contactar amb editor d'informació
+title_list = Llista
+title_read = Llegir
+title_edit = Editar
+title_delete = Esborrar
+title_entry = Entrada
+title_public_info = Informació pública
+title_protected_info = Informació protegida
+title_personal_info = Informació personal
+toolbar_delete = esborrar
+toolbar_edit = editar
+toolbar_new = nou
+bar_search = Buscar
+bar_delete = esborrar
+bar_cancel = Cancel·lar
+bar_save = Desar
+bar_new = nou
+bar_edit = editar
+bar_back = enrere
+bar_post = Enviar
+bar_preview = Previsualitzar
+bar_save_draft = Desar esborrany
+continue = Continuar
+cancel = Cancel·lar
+no_profile_msg = Editeu el vostre Perfil primer. (Teniu buit el Nom o Cognom)
 error_msg = Error:
-error_empty_first_name = Error: Empty First Name
-error_empty_last_name = Error: Empty Last Name
-
-info_A = Complete form and then choose 'Save' at the bottom. A
+error_empty_first_name = Error: Nom buit
+error_empty_last_name = Error: Cognom buit
+info_A = Omplir el formulari i triar 'Desar' al peu. Un
 info_required_sign = *
-info_required = means it is required information.
-
-search_for_profile = Search for Profile
-search = Search
-search_msg = Search:
-name_or_network = Name or Network ID:
-no_users_matching = No users matching '
-were_found = ' were found.
-
-
-alt_official_id_photo = Official ID Photo
-alt_official_id_photo_unavailable = No Official ID photo is Available
-alt_picture = User selected picture url
-alt_picture_unavailable = No photo available
-alt_table2summary = tabular representation of searched profiles by lastname or username
-alt_select10 = Select 10 items
-alt_select20 = Select 20 items
-alt_select30 = Select 30 items
-alt_select40 = Select 40 items
-alt_select50 = Select 50 items
-alt_search_result1 = Display first set of results
-alt_search_result2 = Display previous set of results
-alt_search_result3 = Select number of seach result displayed per page
-alt_search_result4 = Display next set of results
-alt_search_result5 = Display last set of results
- 
-
-permission_exception = Please login to view your profile
-search_table = table to display search links
-display_profile = Display Profile
-
-user_not_logged_in = User not logged in
-java.search_keyword = Last name or ID
+info_required = significa que és informació obligatòria.
+search_for_profile = Cercar perfil
+search = Cercar
+search_msg = Cercar:
+name_or_network = Identificador de Nom o de Xarxa:
+no_users_matching = No s'ha trobat cap usuari'
+were_found = ' amb aquest nom.
+alt_official_id_photo = Fotografia d'identificació oficial
+alt_official_id_photo_unavailable = No hi ha cap fotografia d'identificació oficial disponible
+alt_picture = url d'imatge seleccionat per l'usuari
+alt_picture_unavailable = No hi ha imatges disponibles
+alt_table2summary = representació en taula de perfils cercats per cognom o per nom d'usuari
+alt_select10 = Seleccionar 10 elements
+alt_select20 = Seleccionar 20 elements
+alt_select30 = Seleccionar 30 elements
+alt_select40 = Seleccionar 40 elements
+alt_select50 = Seleccionar 50 elements
+alt_search_result1 = Mostrar el primer conjunt de resultats
+alt_search_result2 = Mostrar el grup de resultats anterior
+alt_search_result3 = Seleccionar el número de resultat de la cerca mostrat per pàgina
+alt_search_result4 = Mostrar el grup de resultats següent
+alt_search_result5 = Mostrar l'últim grup de resultats
+permission_exception = Entreu per visualitzar el vostre perfil
+search_table = taula per mostrar els enllaços de cerca
+display_profile = Mostrar perfil
+user_not_logged_in = L'usuari no ha accedit al sistema
+java.search_keyword = Cognom o identificador
