--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
@@ -2,50 +2,50 @@ profile = Perfil
 profile_first_name = Nom
 profile_last_name = Cognom
 profile_nick_name = Sobrenom
-profile_position = PosiciÃ³
+profile_position = Posició
 profile_department = Departament
 profile_school = Facultat
 profile_room = Sala
 profile_picture = Imatge
 profile_picture_alt = Imatge de
 profile_picture_url = URL de la imatge
-profile_university_id = Usar imatge d'identificaciÃ³ de la Universitat
+profile_university_id = Usar imatge d'identificació de la Universitat
 profile_keep_picture_url = imatge_url
 profile_keep_university_id = IdentificadorUniversitat
-profile_email = Correu electrÃ²nic
-profile_homepage = PÃ gina Inicial
-profile_work_phone = TelÃ¨fon Feina
-profile_home_phone = TelÃ¨fon Casa
+profile_email = Correu electrònic
+profile_homepage = Pàgina Inicial
+profile_work_phone = Telèfon Feina
+profile_home_phone = Telèfon Casa
 profile_other_information = Altres
 profile_faculty = Facultat
 profile_student = Estudiant
 profile_guest = Visitant
-profile_viewable_by = Visualitzable per tots els rols segÃ¼ents
+profile_viewable_by = Visualitzable per tots els rols següents
 profile_main_title = El Meu Perfil
 profile_edit = Editar El Meu Perfil
 profile_edit_title = El Meu Perfil
 profile_show = Mostrar El Meu Perfil
 profile_hide_entire = Ocultar tot El Meu Perfil
-profile_hide_personal = Ocultar nomÃ©s la InformaciÃ³ Personal
-edit_pic_preference = Triar imatge d'identificaciÃ³ preferent
+profile_hide_personal = Ocultar només la Informació Personal
+edit_pic_preference = Triar imatge d'identificació preferent
 edit_pic_preference_url = Usar URL d'imatge:
-edit_pic_preference_univ = Usar imatge d'identificaciÃ³ de la Universitat
+edit_pic_preference_univ = Usar imatge d'identificació de la Universitat
 edit_pic_preference_none = Cap
-title_bar = Contactar amb editor d'informaciÃ³
+title_bar = Contactar amb editor d'informació
 title_list = Llista
 title_read = Llegir
 title_edit = Editar
 title_delete = Esborrar
 title_entry = Entrada
-title_public_info = InformaciÃ³ pÃºblica
-title_protected_info = InformaciÃ³ protegida
-title_personal_info = InformaciÃ³ personal
+title_public_info = Informació pública
+title_protected_info = Informació protegida
+title_personal_info = Informació personal
 toolbar_delete = esborrar
 toolbar_edit = editar
 toolbar_new = nou
 bar_search = Buscar
 bar_delete = esborrar
-bar_cancel = CancelÂ·lar
+bar_cancel = Cancel·lar
 bar_save = Desar
 bar_new = nou
 bar_edit = editar
@@ -54,25 +54,25 @@ bar_post = Enviar
 bar_preview = Previsualitzar
 bar_save_draft = Desar esborrany
 continue = Continuar
-cancel = CancelÂ·lar
+cancel = Cancel·lar
 no_profile_msg = Editeu el vostre Perfil primer. (Teniu buit el Nom o Cognom)
 error_msg = Error:
 error_empty_first_name = Error: Nom buit
 error_empty_last_name = Error: Cognom buit
 info_A = Omplir el formulari i triar 'Desar' al peu. Un
 info_required_sign = *
-info_required = significa que Ã©s informaciÃ³ obligatÃ²ria.
+info_required = significa que és informació obligatòria.
 search_for_profile = Cercar perfil
 search = Cercar
 search_msg = Cercar:
 name_or_network = Identificador de Nom o de Xarxa:
 no_users_matching = No s'ha trobat cap usuari'
 were_found = ' amb aquest nom.
-alt_official_id_photo = Fotografia d'identificaciÃ³ oficial
-alt_official_id_photo_unavailable = No hi ha cap fotografia d'identificaciÃ³ oficial disponible
+alt_official_id_photo = Fotografia d'identificació oficial
+alt_official_id_photo_unavailable = No hi ha cap fotografia d'identificació oficial disponible
 alt_picture = url d'imatge seleccionat per l'usuari
 alt_picture_unavailable = No hi ha imatges disponibles
-alt_table2summary = representaciÃ³ en taula de perfils cercats per cognom o per nom d'usuari
+alt_table2summary = representació en taula de perfils cercats per cognom o per nom d'usuari
 alt_select10 = Seleccionar 10 elements
 alt_select20 = Seleccionar 20 elements
 alt_select30 = Seleccionar 30 elements
@@ -80,11 +80,11 @@ alt_select40 = Seleccionar 40 elements
 alt_select50 = Seleccionar 50 elements
 alt_search_result1 = Mostrar el primer conjunt de resultats
 alt_search_result2 = Mostrar el grup de resultats anterior
-alt_search_result3 = Seleccionar el nÃºmero de resultat de la cerca mostrat per pÃ gina
-alt_search_result4 = Mostrar el grup de resultats segÃ¼ent
-alt_search_result5 = Mostrar l'Ãºltim grup de resultats
+alt_search_result3 = Seleccionar el número de resultat de la cerca mostrat per pàgina
+alt_search_result4 = Mostrar el grup de resultats següent
+alt_search_result5 = Mostrar l'últim grup de resultats
 permission_exception = Entreu per visualitzar el vostre perfil
-search_table = taula per mostrar els enllaÃ§os de cerca
+search_table = taula per mostrar els enllaços de cerca
 display_profile = Mostrar perfil
 user_not_logged_in = L'usuari no ha accedit al sistema
 java.search_keyword = Cognom o identificador
