SAK-7676 - update spanish properties files
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@20431 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
@@ -88,3 +88,7 @@ search_table = taula per mostrar els enllaços de cerca
 display_profile = Mostrar perfil
 user_not_logged_in = L'usuari no ha accedit al sistema
 java.search_keyword = Cognom o identificador
+########### Revisado por la Universidad Politécnica de Valencia  ######
+invalid = no és vàlid.
+validurl = Per favor, introdueixi una URL vàlida.
+
