--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
@@ -97,3 +97,6 @@ display_profile=Muestra Perfil
 
 #Añadido por la UPA
 user_not_logged_in = El usuario no está identificado
+java.search_keyword = Apellidos o identificador de usuario
+invalid = no es válido.
+validurl = Por favor, introduzca una URL válida.
