--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
@@ -7,6 +7,7 @@ profile_department=Departmento
 profile_school=Escuela
 profile_room=Despacho
 profile_picture=Foto
+profile_picture_alt=Foto de
 profile_picture_url=URL de la foto
 profile_university_id=Usa la ID de la foto de la Universidad
 profile_keep_picture_url =picture_url
@@ -82,7 +83,11 @@ alt_official_id_photo_unavailable=No hay disponible ningún ID de foto oficial
 alt_picture=Foto seleccionada por el usuario
 alt_picture_unavailable=Foto no disponible
 alt_table2summary=representación tabular de los perfiles buscados por apellidos o nombre de usuario
-
+alt_select10=Seleccione 10 elementos
+alt_select20=Seleccione 20 elementos
+alt_select30=Seleccione 30 elementos
+alt_select40=Seleccione 40 elementos
+alt_select50=Seleccione 50 elementos
 alt_search_result1=Muestra el primer bloque de resultados
 alt_search_result2=Muestra el bloque de resultados previo
 alt_search_result3=Seleccione el número de resultados por página
