--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
@@ -1,102 +1,91 @@
+#Stored by I18NEdit, may be edited!
+alt_official_id_photo=Officiellt fotografi
+alt_official_id_photo_unavailable=Det finns inget officiellt fotografi tillg\u00E4ngligt
+alt_picture=URL till bild (vald av anv\u00E4ndare)
+alt_picture_unavailable=Inget fotografi tillg\u00E4ngligt
+alt_search_result1=Visa f\u00F6rsta omg\u00E5ngens resultat
+alt_search_result2=Visa n\u00E4sta sida med resultat
+alt_search_result3=V\u00E4lj antal resultat att visa per sida
+alt_search_result4=Visa n\u00E4sta sida med resultat
+alt_search_result5=Visa sista sidan med resultat
+alt_select10=V\u00E4lj 10 stycken
+alt_select20=V\u00E4lj 20 stycken 
+alt_select30=V\u00E4lj 30 stycken
+alt_select40=V\u00E4lj 40 stycken 
+alt_select50=V\u00E4lj 50 stycken  
+alt_table2summary=S\u00F6kta profiler per efternamn eller anv\u00E4ndarnamn visade i tabellform
+bar_back=Tillbaka
+bar_cancel=Avbryt
+bar_delete=Delete
+bar_edit=\u00C4ndra
+bar_new=Ny
+bar_post=Skicka
+bar_preview=F\u00F6rhandsgranska
+bar_save=Spara
+bar_save_draft=Spara utkast
+bar_search=S\u00F6k 
+cancel=Avbryt
+continue=Forts\u00E4tt
+display_profile=Visa profil
+edit_pic_preference=V\u00E4lj bildegenskaper
+edit_pic_preference_none=Inget
+edit_pic_preference_univ=Anv\u00E4nd universitetets officiella fotografi
+edit_pic_preference_url=Anv\u00E4nd extern URL (kan vara en bild i Resources)\:
+error_empty_first_name=Fel\: Inget f\u00F6rnamn 
+error_empty_last_name=Fel\: Inget efternamn
+error_msg=Fel\:
+info_A=Fyll i uppgifterna och v\u00E4lj sedan 'Spara' l\u00E4ngst ned. En
+info_required=betyder att f\u00E4ltet \u00E4r obligatoriskt.
+info_required_sign=*
+java.search_keyword=Efternamn eller anv\u00E4ndar-id
+name_or_network=Namn eller anv\u00E4ndar-id\:
+no_profile_msg=Du m\u00E5ste fylla i fullst\u00E4ndigt namn. 
+no_users_matching=Inga anv\u00E4ndare passar in p\u00E5 '
+permission_exception=Logga in f\u00F6r att se din profil 
 profile=Profil
-profile_first_name=Förnamn
+profile_department=Institution/motsv.
+profile_edit=\u00C4ndra min profil
+profile_edit_title=Min profil
+profile_email=E-postadress
+profile_faculty=Fakultet
+profile_first_name=F\u00F6rnamn
+profile_guest=G\u00E4st
+profile_hide_entire=D\u00F6lj hela min profil
+profile_hide_personal=D\u00F6lj enbart min personliga information
+profile_home_phone=Telefonnummer hem
+profile_homepage=Hemsida
+profile_keep_picture_url=bild-URL
+profile_keep_university_id=Universitets-id
 profile_last_name=Efternamn
+profile_main_title=Min profil
 profile_nick_name=Smeknamn
-profile_position=Befattning
-profile_department=Enhet
-profile_school=Lärosäte
-profile_room=Rum
+profile_other_information=Annat 
 profile_picture=Bild
 profile_picture_alt=Bild av
 profile_picture_url=Bild URL
-profile_university_id=Använd universitetets  IDfotografi
-profile_keep_picture_url =bild_url
-profile_keep_university_id=UniversitetsID
-profile_email=E-postadress
-profile_homepage=Hemsida
-profile_work_phone=Telefonnummer arbete
-profile_home_phone=Telefonnummer hem
-profile_other_information=Annat 
-profile_faculty=Fakultet
-profile_student=Student
-profile_guest=Gäst
-profile_viewable_by=Kan ses av användare med följande roller
-profile_main_title=Min profil
-
-profile_edit=Ändra min profil
-profile_edit_title=Min profil
+profile_position=Befattning
+profile_room=Rum
+profile_school=L\u00E4ros\u00E4te
 profile_show=Visa min profil
-profile_hide_entire=Dölj hela min profil
-profile_hide_personal=Dölj enbart min personliga information
-edit_pic_preference=Välj bildid-egenskaper
-edit_pic_preference_url=Använd URL till bild :
-edit_pic_preference_univ=Använd universitetets Id-fotografi
-edit_pic_preference_none=Inget
-
-title_bar=Editor för kontaktinformation
-title_list=Lista
-title_read=Läs
-title_edit=Ändra
+profile_student=Student
+profile_university_id=Anv\u00E4nd universitetets officiella fotografi
+profile_viewable_by=Kan ses av anv\u00E4ndare med f\u00F6ljande roller
+profile_work_phone=Telefonnummer arbete
+search=S\u00F6k
+search_for_profile=S\u00F6k profil
+search_msg=S\u00F6k\:
+search_table=tabell f\u00F6r att visa s\u00F6kresultat 
+title_bar=Editor f\u00F6r kontaktinformation
 title_delete=Ta bort
-title_entry=Inlägg
-title_public_info=Offentlig information
-title_protected_info=Dold information
+title_edit=\u00C4ndra
+title_entry=Inl\u00E4gg
+title_list=Lista
 title_personal_info=Personlig information
-
-toolbar_delete=ta bort
-toolbar_edit=ändra
+title_protected_info=Dold information
+title_public_info=Offentlig information
+title_read=L\u00E4s
+toolbar_delete=Ta bort
+toolbar_edit=\u00C4ndra
 toolbar_new=ny
-
-bar_search=sök 
-bar_delete=delete
-bar_cancel=avbryt
-bar_save=spara
-bar_new=ny
-bar_edit=ändra
-bar_back=tillbaka
-bar_post=skicka
-bar_preview=förhandsgranska
-bar_save_draft=spara utkast
-
-continue=Fortsätt
-cancel=Avbryt
-
-no_profile_msg=Du måste fylla i fullständigt namn först. 
-error_msg=Fel:
-error_empty_first_name=Fel: Inget förnamn 
-error_empty_last_name=Fel: Inget efternamn
-
-info_A=Fyll i uppgifterna och välj sedan 'Spara' längst ned. En
-info_required_sign=*
-info_required=innebär att de är nödvändiga uppgifter.
-
-search_for_profile=Sök profil
-search=Sök
-search_msg=Sök:
-name_or_network=Namn eller användarid:
-no_users_matching=Inga användar som passar in på '
+user_not_logged_in=Icke inloggad anv\u00E4ndare
 were_found=' hittades.
-
-
-alt_official_id_photo=Officiellt ID-fotografi
-alt_official_id_photo_unavailable=Det finns inget officiellt ID-fotografi tillgängligt
-alt_picture=Bild URL vald av användare
-alt_picture_unavailable=Inget fotografi tillgängligt
-alt_table2summary=Sökta profiler per efternamn eller användarnamn visade i tabellform
-alt_select10=Välj 10 stycken
-alt_select20=Välj 20 stycken 
-alt_select30=Välj 30 stycken
-alt_select40=Välj 40 stycken 
-alt_select50=Välj 50 stycken  
-alt_search_result1=Visa första omgångens resultat
-alt_search_result2=Visa nästa sida med resultat
-alt_search_result3=Välj antal resultat att visa per sida
-alt_search_result4=Visa nästa sida med resultat
-alt_search_result5=Visa sista sidan med resultat
-
-permission_exception=Logga in för att se din profil 
-search_table=tabell för att visa sökresultat 
-display_profile=Visa profil
-
-user_not_logged_in = Icke inloggad användare
-java.search_keyword = Efternamn eller användarid
