SAK-8751 update french translation
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@22982 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_fr_CA.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_fr_CA.properties
@@ -17,15 +17,15 @@ alt_search_result4 = Afficher la s\u00E9rie de r\u00E9sultats suivants
 
 alt_search_result5 = Afficher la derni\u00E8re s\u00E9rie de r\u00E9sultats
 
-alt_select10 = S\u00E9lectionner 10 items
+alt_select10 = S\u00E9lectionner 10 \u00E9l\u00E9ments
 
-alt_select20 = S\u00E9lectionner 20 items
+alt_select20 = S\u00E9lectionner 20 \u00E9l\u00E9ments
 
-alt_select30 = S\u00E9lectionner 30 items
+alt_select30 = S\u00E9lectionner 30 \u00E9l\u00E9ments
 
-alt_select40 = S\u00E9lectionner 40 items
+alt_select40 = S\u00E9lectionner 40 \u00E9l\u00E9ments
 
-alt_select50 = S\u00E9lectionner 50 items
+alt_select50 = S\u00E9lectionner 50 \u00E9l\u00E9ments
 
 alt_table2summary = repr\u00E9sentation en tableau des profils recherch\u00E9s par nom de famille ou nom d'utilisateur
 
@@ -74,6 +74,8 @@ info_A = Compl\u00E9tez le forumlaire puis s\u00E9lectionnez 'Enregistrer' au ba
 info_required = signifie que l'information est obligatoire.
 
 info_required_sign = *
+
+invalid = est invalide.
 
 java.search_keyword = Mots cl\u00E9s de la recherche
 
@@ -176,5 +178,7 @@ toolbar_edit = \u00E9diter
 toolbar_new = nouveau
 
 user_not_logged_in = Utilisateur non connect\u00E9
+
+validurl = Veuillez inscrire une URL valide.
 
 were_found = ' ont \u00E9t\u00E9 trouv\u00E9s.
