--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
@@ -101,3 +101,6 @@ display_profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u8868\u793a
 
 user_not_logged_in = \u30e6\u30fc\u30b6\u306f\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u3044\u307e\u305b\u3093
 java.search_keyword = \u540d\u5b57\u307e\u305f\u306f ID
+
+invalid = \u306f\u7121\u52b9\u3067\u3059\uff0e
+validurl = \u6709\u52b9\u306a URL \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff0e
