SAK-10490 SAK-2463 add profile fields fro Modile phone number
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/SAK-10490@34335 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -22,6 +22,7 @@ profile_student=Student
 profile_guest=Guest
 profile_viewable_by=Viewable by those of follwing roles
 profile_main_title=My Profile
+profile_mobile=Mobile Phone
 
 profile_edit=Edit my Profile 
 profile_edit_title=My Profile
