--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -66,6 +66,7 @@ no_profile_msg=Please edit your Profile first. (You have empty First Name or Las
 error_msg=Error:
 error_empty_first_name=Error: Empty First Name 
 error_empty_last_name=Error: Empty Last Name
+error_invalid_email=Error: that is not a valid email adress
 
 info_A=Complete form and then choose 'Save' at the bottom. A
 info_required_sign=*
