svn merge -r31964:34490 https://source.sakaiproject.org/svn/profile/branches/SAK-10490/ Skipped missing target: 'common-composite-component-data/project.xml' U    common-composite-component-data/src/java/org/sakaiproject/component/common/edu/person/InetOrgPersonImpl.java C    common-composite-component-data/src/java/org/sakaiproject/component/common/edu/person/SakaiPersonImpl.java C    common-composite-component-data/src/java/org/sakaiproject/component/common/edu/person/SakaiPersonImpl.hbm.xml C    common-composite-component-data/pom.xml C    .classpath Skipped missing target: 'manager-api/project.xml' Skipped missing target: 'profile-component-shared/project.xml' U    profile-component-shared/src/java/org/sakaiproject/component/app/profile/ProfileImpl.java C    profile-component-shared/src/java/org/sakaiproject/component/app/profile/ProfileManagerImpl.java Skipped missing target: 'components/project.xml' U    components/src/webapp/WEB-INF/components.xml Skipped missing target: 'profile-api/project.xml' U    profile-api/src/java/org/sakaiproject/api/app/profile/Profile.java Skipped missing target: 'common-composite-component/project.xml' A    common-composite-component/src/java/org/sakaiproject/component/common/edu/person/FileSystemPhotoService.java A    common-composite-component/src/java/org/sakaiproject/component/common/edu/person/SakaiPersonPhotoService.java U    common-composite-component/src/java/org/sakaiproject/component/common/edu/person/SakaiPersonManagerImpl.java C    common-composite-component/pom.xml Skipped missing target: 'edu-person-api/project.xml' C    edu-person-api/src/java/org/sakaiproject/api/common/edu/person/SakaiPerson.java A    edu-person-api/src/java/org/sakaiproject/api/common/edu/person/BasePhotoService.java A    edu-person-api/src/java/org/sakaiproject/api/common/edu/person/PhotoService.java Skipped missing target: 'type-api/project.xml' Skipped missing target: 'common-components/project.xml' U    common-components/src/webapp/WEB-INF/co

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -22,6 +22,7 @@ profile_student=Student
 profile_guest=Guest
 profile_viewable_by=Viewable by those of follwing roles
 profile_main_title=My Profile
+profile_mobile=Mobile Phone
 
 profile_edit=Edit my Profile 
 profile_edit_title=My Profile
@@ -65,6 +66,7 @@ no_profile_msg=Please edit your Profile first. (You have empty First Name or Las
 error_msg=Error:
 error_empty_first_name=Error: Empty First Name 
 error_empty_last_name=Error: Empty Last Name
+error_invalid_email=Error: that is not a valid email adress
 
 info_A=Complete form and then choose 'Save' at the bottom. A
 info_required_sign=*
