--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_zh_CN.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_zh_CN.properties
@@ -1,98 +1,93 @@
-profile=\u8d44\u6599
-profile_first_name=\u59d3
-profile_last_name=\u540d
-profile_nick_name=\u6635\u79f0
-profile_position=\u804c\u4f4d
-profile_department=\u9662\u7cfb
-profile_school=\u5b66\u6821
-profile_room=\u4f4f\u5740
-profile_picture=\u7167\u7247
-profile_picture_url=\u7167\u7247URL
-profile_university_id=\u4f7f\u7528\u5b66\u6821ID\u7167\u7247
-profile_keep_picture_url =\u56fe\u7247url
-profile_keep_university_id=\u5b66\u6821ID
-profile_email=\u7535\u5b50\u90ae\u4ef6
-profile_homepage=\u4e3b\u9875
-profile_work_phone=\u5de5\u4f5c\u7535\u8bdd
-profile_home_phone=\u5bb6\u5ead\u7535\u8bdd
-profile_other_information=\u5176\u4ed6
-profile_faculty=\u6559\u5e08
-profile_student=\u5b66\u751f
-profile_guest=\u5ba2\u4eba
-profile_viewable_by=\u4e0b\u5217\u89d2\u8272\u53ef\u6d4f\u89c8
-profile_main_title=\u6211\u7684\u8d44\u6599
-
-profile_edit=\u7f16\u8f91\u6211\u7684\u8d44\u6599
-profile_edit_title=\u6211\u7684\u8d44\u6599
-profile_show=\u663e\u793a\u6211\u7684\u8d44\u6599
-profile_hide_entire=\u9690\u85cf\u6240\u6709\u8d44\u6599
-profile_hide_personal=\u4ec5\u9690\u85cf\u4e2a\u4eba\u8d44\u6599
-edit_pic_preference=\u9009\u62e9\u7167\u7247id\u5c5e\u6027
-edit_pic_preference_url=\u4f7f\u7528\u7167\u7247\u7684URL\uff1a
-edit_pic_preference_univ=\u4f7f\u7528\u5b66\u6821Id\u7167\u7247
-edit_pic_preference_none=\u65e0
-
-title_bar=\u8054\u7cfb\u4fe1\u606f\u7f16\u8f91
-title_list=\u5217\u8868
-title_read=\u8bfb
-title_edit=\u7f16\u8f91
-title_delete=\u5220\u9664
-title_entry=\u6761\u76ee
-title_public_info=\u516c\u5f00\u4fe1\u606f
-title_protected_info=\u4fdd\u62a4\u4fe1\u606f
-title_personal_info=\u4e2a\u4eba\u4fe1\u606f
-
-toolbar_delete=\u5220\u9664
-toolbar_edit=\u7f16\u8f91
-toolbar_new=\u65b0\u7684
-
-bar_search=\u68c0\u7d22 
-bar_delete=\u5220\u9664
-bar_cancel=\u53d6\u6d88
-bar_save=\u4fdd\u5b58
-bar_new=\u65b0\u7684
-bar_edit=\u7f16\u8f91
-bar_back=\u56de\u9000
-bar_post=\u53d1\u8868
-bar_preview=\u9884\u89c8
-bar_save_draft=\u4fdd\u5b58\u8349\u7a3f
-
-continue=\u7ee7\u7eed
-cancel=\u53d6\u6d88
-
-no_profile_msg=\u8bf7\u9996\u5148\u7f16\u8f91\u60a8\u7684\u4e2a\u4eba\u8d44\u6599\u3002\uff08\u4f60\u7684\u59d3\u540d\u4e3a\u7a7a\uff09
-error_msg=\u9519\u8bef\uff1a
-error_empty_first_name=\u9519\u8bef\uff1a\u540d\u5b57\u4e3a\u7a7a
-error_empty_last_name=\u9519\u8bef\uff1a\u59d3\u4e3a\u7a7a
-
-info_A=\u5b8c\u6210\u8868\u683c\u540e\u9009\u62e9\u5e95\u90e8\u7684\u201c\u4fdd\u5b58\u201d\u3002
-info_required_sign=*
-info_required=\u8868\u793a\u9700\u8981\u586b\u5199\u7684\u4fe1\u606f
-
-search_for_profile=\u68c0\u7d22\u8d44\u6599
-search=\u68c0\u7d22
-search_msg=\u901a\u8fc7\u7528\u6237\u540d\u5b57\uff08\u5982\u59d3\uff09\u6216\u8005\u7f51\u7edcID\uff08\u5982jsmith\uff09\u68c0\u7d22\u7528\u6237\u8d44\u6599\u3002
-name_or_network=\u59d3\u540d\u6216\u7f51\u7edcID\uff1a
-no_users_matching=\u6ca1\u6709\u627e\u5230\u5339\u914d'
-were_found='\u7684\u7528\u6237\u3002
-
-
-alt_official_id_photo=\u5b98\u65b9ID\u7167\u7247
-alt_official_id_photo_unavailable=\u4e0d\u5b58\u5728\u5b98\u65b9ID\u7167\u7247
+#Stored by I18NEdit, may be edited!
+alt_official_id_photo=\u5B98\u65B9ID\u7167\u7247
+alt_official_id_photo_unavailable=\u4E0D\u5B58\u5728\u5B98\u65B9ID\u7167\u7247
 alt_picture=\u7528\u6237\u6240\u9009\u7167\u7247url
-alt_picture_unavailable=\u4e0d\u5b58\u5728\u7167\u7247
-alt_table2summary=\u6309\u7167\u59d3\u6216\u8005\u540d\u6392\u5e8f\u68c0\u7d22\u5230\u7684\u8d44\u6599\u8868\u683c\u3002
-
-alt_search_result1=\u663e\u793a\u7b2c\u4e00\u6761\u7ed3\u679c\u8bb0\u5f55
-alt_search_result2=\u663e\u793a\u4e0a\u4e00\u6761\u7ed3\u679c\u8bb0\u5f55
-alt_search_result3=\u9009\u62e9\u6bcf\u9875\u663e\u793a\u591a\u5c11\u6761\u7ed3\u679c
-alt_search_result4=\u663e\u793a\u4e0b\u4e00\u6761\u7ed3\u679c\u8bb0\u5f55
-alt_search_result5=\u663e\u793a\u6700\u540e\u4e00\u6761\u7ed3\u679c\u8bb0\u5f55
- 
-
-permission_exception=\u8bf7\u767b\u9646\u4ee5\u67e5\u770b\u4f60\u7684\u8d44\u6599
-search_table=\u663e\u793a\u68c0\u7d22\u94fe\u63a5\u7684\u8868\u683c
-display_profile=\u663e\u793a\u8d44\u6599
-
-user_not_logged_in = \u7528\u6237\u672a\u767b\u9646
-java.search_keyword = \u5173\u952e\u5b57
+alt_picture_unavailable=\u4E0D\u5B58\u5728\u7167\u7247
+alt_search_result1=\u663E\u793A\u7B2C\u4E00\u6761\u7ED3\u679C\u8BB0\u5F55
+alt_search_result2=\u663E\u793A\u4E0A\u4E00\u6761\u7ED3\u679C\u8BB0\u5F55
+alt_search_result3=\u9009\u62E9\u6BCF\u9875\u663E\u793A\u591A\u5C11\u6761\u7ED3\u679C
+alt_search_result4=\u663E\u793A\u4E0B\u4E00\u6761\u7ED3\u679C\u8BB0\u5F55
+alt_search_result5=\u663E\u793A\u6700\u540E\u4E00\u6761\u7ED3\u679C\u8BB0\u5F55
+alt_select10=\u9009\u62E910\u6761\u8BB0\u5F55
+alt_select20=\u9009\u62E920\u6761\u8BB0\u5F55
+alt_select30=\u9009\u62E930\u6761\u8BB0\u5F55
+alt_select40=\u9009\u62E940\u6761\u8BB0\u5F55
+alt_select50=\u9009\u62E950\u6761\u8BB0\u5F55
+alt_table2summary=\u6309\u7167\u59D3\u6216\u8005\u540D\u6392\u5E8F\u68C0\u7D22\u5230\u7684\u8D44\u6599\u8868\u683C\u3002
+bar_back=\u56DE\u9000
+bar_cancel=\u53D6\u6D88
+bar_delete=\u5220\u9664
+bar_edit=\u7F16\u8F91
+bar_new=\u65B0\u7684
+bar_post=\u53D1\u8868
+bar_preview=\u9884\u89C8
+bar_save=\u4FDD\u5B58
+bar_save_draft=\u4FDD\u5B58\u8349\u7A3F
+bar_search=\u68C0\u7D22 
+cancel=\u53D6\u6D88
+continue=\u7EE7\u7EED
+display_profile=\u663E\u793A\u8D44\u6599
+edit_pic_preference=\u9009\u62E9\u7167\u7247id\u5C5E\u6027
+edit_pic_preference_none=\u65E0
+edit_pic_preference_univ=\u4F7F\u7528\u5B66\u6821Id\u7167\u7247
+edit_pic_preference_url=\u4F7F\u7528\u7167\u7247\u7684URL\uFF1A
+error_empty_first_name=\u9519\u8BEF\uFF1A\u540D\u5B57\u4E3A\u7A7A
+error_empty_last_name=\u9519\u8BEF\uFF1A\u59D3\u4E3A\u7A7A
+error_msg=\u9519\u8BEF\uFF1A
+info_A=\u5B8C\u6210\u8868\u683C\u540E\u9009\u62E9\u5E95\u90E8\u7684\u201C\u4FDD\u5B58\u201D\u3002
+info_required=\u8868\u793A\u9700\u8981\u586B\u5199\u7684\u4FE1\u606F
+info_required_sign=*
+invalid=\u65E0\u6548\u3002
+java.search_keyword=\u5173\u952E\u5B57
+name_or_network=\u59D3\u540D\u6216\u7F51\u7EDCID\uFF1A
+no_profile_msg=\u8BF7\u9996\u5148\u7F16\u8F91\u60A8\u7684\u4E2A\u4EBA\u8D44\u6599\u3002\uFF08\u4F60\u7684\u59D3\u540D\u4E3A\u7A7A\uFF09
+no_users_matching=\u6CA1\u6709\u627E\u5230\u5339\u914D'
+permission_exception=\u8BF7\u767B\u9646\u4EE5\u67E5\u770B\u4F60\u7684\u8D44\u6599
+profile=\u8D44\u6599
+profile_department=\u9662\u7CFB
+profile_edit=\u7F16\u8F91\u6211\u7684\u8D44\u6599
+profile_edit_title=\u6211\u7684\u8D44\u6599
+profile_email=\u7535\u5B50\u90AE\u4EF6
+profile_faculty=\u6559\u5E08
+profile_first_name=\u59D3
+profile_guest=\u5BA2\u4EBA
+profile_hide_entire=\u9690\u85CF\u6240\u6709\u8D44\u6599
+profile_hide_personal=\u4EC5\u9690\u85CF\u4E2A\u4EBA\u8D44\u6599
+profile_home_phone=\u5BB6\u5EAD\u7535\u8BDD
+profile_homepage=\u4E3B\u9875
+profile_keep_picture_url=\u56FE\u7247url
+profile_keep_university_id=\u5B66\u6821ID
+profile_last_name=\u540D
+profile_main_title=\u6211\u7684\u8D44\u6599
+profile_nick_name=\u6635\u79F0
+profile_other_information=\u5176\u4ED6
+profile_picture=\u7167\u7247
+profile_picture_alt=\u56FE\u7247
+profile_picture_url=\u7167\u7247URL
+profile_position=\u804C\u4F4D
+profile_room=\u4F4F\u5740
+profile_school=\u5B66\u6821
+profile_show=\u663E\u793A\u6211\u7684\u8D44\u6599
+profile_student=\u5B66\u751F
+profile_university_id=\u4F7F\u7528\u5B66\u6821ID\u7167\u7247
+profile_viewable_by=\u4E0B\u5217\u89D2\u8272\u53EF\u6D4F\u89C8
+profile_work_phone=\u5DE5\u4F5C\u7535\u8BDD
+search=\u68C0\u7D22
+search_for_profile=\u68C0\u7D22\u8D44\u6599
+search_msg=\u901A\u8FC7\u7528\u6237\u540D\u5B57\uFF08\u5982\u59D3\uFF09\u6216\u8005\u7F51\u7EDCID\uFF08\u5982jsmith\uFF09\u68C0\u7D22\u7528\u6237\u8D44\u6599\u3002
+search_table=\u663E\u793A\u68C0\u7D22\u94FE\u63A5\u7684\u8868\u683C
+title_bar=\u8054\u7CFB\u4FE1\u606F\u7F16\u8F91
+title_delete=\u5220\u9664
+title_edit=\u7F16\u8F91
+title_entry=\u6761\u76EE
+title_list=\u5217\u8868
+title_personal_info=\u4E2A\u4EBA\u4FE1\u606F
+title_protected_info=\u4FDD\u62A4\u4FE1\u606F
+title_public_info=\u516C\u5F00\u4FE1\u606F
+title_read=\u8BFB
+toolbar_delete=\u5220\u9664
+toolbar_edit=\u7F16\u8F91
+toolbar_new=\u65B0\u7684
+user_not_logged_in=\u7528\u6237\u672A\u767B\u9646
+validurl=\u8BF7\u8F93\u5165\u6709\u6548\u7684URL
+were_found='\u7684\u7528\u6237\u3002
