SAK-12769: Updated Portuguese translation
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@42202 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_pt_PT.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_pt_PT.properties
@@ -35,7 +35,7 @@ error_empty_first_name=Erro\: Nome n\u00E3o especificado
 error_empty_last_name=Erro\: Apelido n\u00E3o especificado
 error_invalid_email=Erro\: Email inv\u00E1lido
 error_msg=Erro\: 
-info_A=Complete o formul\u00E1rio e clique em "Guardar" no fundo da p\u00E1gina. Uma
+info_A=Complete o formul\u00E1rio e clique em "Guardar" no fundo da p\u00E1gina. Um
 info_required=significa informa\u00E7\u00E3o obrigat\u00F3ria.
 info_required_sign=*
 invalid=\u00E9 inv\u00E1lido.
@@ -46,7 +46,7 @@ no_users_matching=N\u00E3o foram encontrados utilizadores com o crit\u00E9rio '
 permission_exception=Efectue login para ver o seu Perfil
 profile=Perfil
 profile_department=Dept./Fac.
-profile_edit=Editar o meu Merfil
+profile_edit=Editar o meu Perfil
 profile_edit_title=Meu Perfil
 profile_email=Email
 profile_faculty=Faculdade
