SAK-13198 Brazilian Portuguese
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@42344 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_pt_BR.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_pt_BR.properties
@@ -1,6 +1,7 @@
-#-------------------------------------------------------
-# Translated by: e-Labora - UNICAMP, Sao Paulo, Brazil
-#-------------------------------------------------------
+#-------------------------------------------------------------------------------
+# Translated by: e-Labora: e-Learning Laboratory - State University of Campinas
+# TIDIA-Ae Project Fapesp, Sao Paulo, Brazil
+#-------------------------------------------------------------------------------
 
 alt_official_id_photo=Foto Oficial de Identifica\u00E7\u00E3o
 alt_official_id_photo_unavailable=Nenhuma Foto de Identifica\u00E7\u00E3o est\u00E1 dispon\u00EDvel
@@ -45,7 +46,7 @@ java.search_keyword=Sobrenome ou Identifica\u00E7\u00E3o
 name_or_network=Nome ou identifica\u00E7\u00E3o no ambiente
 no_profile_msg=Por favor, primeiramente edite seu Perfil (Seu Nome ou Sobrenome est\u00E1 vazio)
 no_users_matching=Nenhum usu\u00E1rio encontrado '
-permission_exception=Por favor, faz o login para visualizar seu perfil
+permission_exception=Por favor, fa\u00c3\u00a7a o login para visualizar seu perfil
 profile=Perfil
 profile_department=Departamento
 profile_edit=Editar Meu Perfil
