SAK-7904 apply mattias' patch (updated for current trunk)
git-svn-id: https://source.sakaiproject.org/svn/profile/branches/SAK-7904@45582 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -33,6 +33,9 @@ edit_pic_preference=Choose picture id preference
 edit_pic_preference_url=Use Picture URL :
 edit_pic_preference_univ=Use University Id Picture
 edit_pic_preference_none=None
+edit_pic_upload=Upload new profile picture
+edit_use_current_img=Use current profile picture
+edit_current_image=Current profile picture : 
 
 title_bar=Contact Information Editor
 title_list=List
@@ -67,6 +70,10 @@ error_msg=Error:
 error_empty_first_name=Error: Empty First Name 
 error_empty_last_name=Error: Empty Last Name
 error_invalid_email=Error: that is not a valid email adress
+error_exception_upload=Unknown error occured while attempting the upload.
+error_filetype_unknown=Filetype was unknown
+error_file_too_large=Uploaded file was too large
+error_no_file_supplied=No file supplied for upload
 
 info_A=Complete form and then choose 'Save' at the bottom. A
 info_required_sign=*
