SAK-3151 http://jira.sakaiproject.org/jira/browse/SAK-3151
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@45586 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages.properties
@@ -85,11 +85,11 @@ alt_official_id_photo_unavailable=No Official ID photo is Available
 alt_picture=User selected picture url
 alt_picture_unavailable=No photo available
 alt_table2summary=tabular representation of searched profiles by lastname or username
-alt_select10=Select 10 items
-alt_select20=Select 20 items 
-alt_select30=Select 30 items 
-alt_select40=Select 40 items 
-alt_select50=Select 50 items  
+alt_select10=Show 10 items
+alt_select20=Show 20 items 
+alt_select30=Show 30 items 
+alt_select40=Show 40 items 
+alt_select50=Show 50 items  
 alt_search_result1=Display first set of results
 alt_search_result2=Display previous set of results
 alt_search_result3=Select number of seach result displayed per page
