SAK-13682 Swedish translation update for 2.5.x
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@47172 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
@@ -27,16 +27,25 @@ bar_search=S\u00F6k
 cancel=Avbryt
 continue=Forts\u00E4tt
 display_profile=Visa profil
+edit_current_image=Befintlig profilbild
 edit_pic_preference=V\u00E4lj bildegenskaper
-edit_pic_preference_none=Inget
+edit_pic_preference_none=Ingen\t
 edit_pic_preference_univ=Anv\u00E4nd universitetets officiella fotografi
 edit_pic_preference_url=Anv\u00E4nd extern URL (kan vara en bild i Resources)\:
+edit_pic_upload=Ladda upp ny profilbild
+edit_use_current_img=Anv\u00E4nd befintlig profilbild
 error_empty_first_name=Fel\: Inget f\u00F6rnamn 
 error_empty_last_name=Fel\: Inget efternamn
+error_exception_upload=Ett ok\u00E4nt fel intr\u00E4ffade vid uppladdningen.
+error_file_too_large=Vald bild \u00E4r f\u00F6r stor, v\u00E4lj en bild som \u00E4r mindre \u00E4n 1 MB.
+error_filetype_unknown=Fel\: Ok\u00E4nd filtyp f\u00F6r bilden.
+error_invalid_email=Fel\: detta \u00E4r ingen giltig e-postadress
 error_msg=Fel\:
+error_no_file_supplied=Fel\: Ingen fil vald vid uppladdningen
 info_A=Fyll i uppgifterna och v\u00E4lj sedan 'Spara' l\u00E4ngst ned. En
 info_required=betyder att f\u00E4ltet \u00E4r obligatoriskt.
 info_required_sign=*
+invalid=\u00E4r ogiltig.
 java.search_keyword=Efternamn eller anv\u00E4ndar-id
 name_or_network=Namn eller anv\u00E4ndar-id\:
 no_profile_msg=Du m\u00E5ste fylla i fullst\u00E4ndigt namn. 
@@ -58,6 +67,7 @@ profile_keep_picture_url=bild-URL
 profile_keep_university_id=Universitets-id
 profile_last_name=Efternamn
 profile_main_title=Min profil
+profile_mobile=Mobiltelefon
 profile_nick_name=Smeknamn
 profile_other_information=Annat 
 profile_picture=Bild
@@ -82,10 +92,11 @@ title_entry=Inl\u00E4gg
 title_list=Lista
 title_personal_info=Personlig information
 title_protected_info=Dold information
-title_public_info=Offentlig information
+title_public_info=Publik information
 title_read=L\u00E4s
-toolbar_delete=Ta bort
-toolbar_edit=\u00C4ndra
+toolbar_delete=ta bort
+toolbar_edit=\u00E4ndra
 toolbar_new=ny
 user_not_logged_in=Icke inloggad anv\u00E4ndare
+validurl=Ange en giltig URL.
 were_found=' hittades.
