--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
@@ -22,6 +22,7 @@ profile_student=\u5b66\u751f
 profile_guest=\u30b2\u30b9\u30c8
 profile_viewable_by=\u6b21\u306e\u30ed\u30fc\u30eb\u306b\u3088\u308a\u8868\u793a\u53ef\u80fd
 profile_main_title=\u500b\u4eba\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb
+profile_mobile=\u643a\u5e2f\u96fb\u8a71
 
 profile_edit=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u306e\u7de8\u96c6
 profile_edit_title=\u500b\u4eba\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb
@@ -65,6 +66,7 @@ no_profile_msg=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u307e\u305a\u7de8\u96c
 error_msg=\u30a8\u30e9\u30fc:
 error_empty_first_name=\u30a8\u30e9\u30fc: \u540d\u524d\u304c\u7a7a\u3067\u3059\uff0e
 error_empty_last_name=\u30a8\u30e9\u30fc: \u540d\u5b57\u304c\u7a7a\u3067\u3059\uff0e
+error_invalid_email=\u30a8\u30e9\u30fc: \u6709\u52b9\u306a\u96fb\u5b50\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3067\u306f\u3042\u308a\u307e\u305b\u3093\uff0e
 
 info_A=\u30d5\u30a9\u30fc\u30e0\u3092\u5168\u90e8\u5165\u529b\u3057\uff0c\u4e00\u756a\u4e0b\u306e\u300c\u4fdd\u5b58\u300d\u3092\u9078\u629e\u3057\u307e\u3059\uff0e
 info_required_sign=*
