SAK-14400, Spanish properties bundle revision, contributed by David Roldán Martínez, Universidad Politécnica de Valencia
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@58027 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_es.properties
@@ -1,4 +1,4 @@
-#Stored by I18NEdit, may be edited!
+﻿#Stored by I18NEdit, may be edited!
 alt_official_id_photo=Foto oficial
 alt_official_id_photo_unavailable=No hay disponible ninguna foto oficial
 alt_picture=Foto seleccionada por el usuario
