--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ja.properties
@@ -1,10 +1,10 @@
 profile = \u30d7\u30ed\u30d5\u30a3\u30fc\u30eb
-profile_first_name=\u540d\u524d
-profile_last_name=\u540d\u5b57
+profile_first_name=\u540d
+profile_last_name=\u59d3
 profile_nick_name=\u30cb\u30c3\u30af\u30cd\u30fc\u30e0
 profile_position=\u5f79\u8077
 profile_department=\u90e8\u9580
-profile_school=\u5b66\u6821\u540d
+profile_school=\u5927\u5b66\u30fb\u5b66\u90e8
 profile_room=\u5efa\u7269\u30fb\u90e8\u5c4b\u756a\u53f7
 profile_picture=\u5199\u771f
 profile_picture_alt=\u5199\u771f: 
@@ -27,7 +27,7 @@ profile_mobile=\u643a\u5e2f\u96fb\u8a71
 profile_edit=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u306e\u7de8\u96c6
 profile_edit_title=\u500b\u4eba\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb
 profile_show=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u306e\u8868\u793a
-profile_hide_entire=\u81ea\u5206\u306e\u5168\u90e8\u306e\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u975e\u8868\u793a
+profile_hide_entire=\u81ea\u5206\u306e\u5168\u90e8\u306e\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u3092\u975e\u8868\u793a
 profile_hide_personal=\u81ea\u5206\u306e\u500b\u4eba\u60c5\u5831\u3060\u3051\u3092\u975e\u8868\u793a
 edit_pic_preference=\u5199\u771f ID \u8a2d\u5b9a\u3092\u9078\u629e
 edit_pic_preference_url=\u5199\u771f URL \u3092\u4f7f\u7528:
@@ -62,7 +62,7 @@ bar_save_draft=\u30c9\u30e9\u30d5\u30c8\u3068\u3057\u3066\u4fdd\u5b58
 continue=\u7d9a\u3051\u308b
 cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
 
-no_profile_msg=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u307e\u305a\u7de8\u96c6\u3057\u3066\u304f\u3060\u3055\u3044 (\u540d\u5b57\u304b\u540d\u524d\u304c\u7a7a\u3067\u3059)\uff0e
+no_profile_msg=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u3092\u307e\u305a\u7de8\u96c6\u3057\u3066\u304f\u3060\u3055\u3044 (\u540d\u5b57\u304b\u540d\u524d\u304c\u7a7a\u3067\u3059)\uff0e
 error_msg=\u30a8\u30e9\u30fc:
 error_empty_first_name=\u30a8\u30e9\u30fc: \u540d\u524d\u304c\u7a7a\u3067\u3059\uff0e
 error_empty_last_name=\u30a8\u30e9\u30fc: \u540d\u5b57\u304c\u7a7a\u3067\u3059\uff0e
@@ -72,7 +72,7 @@ info_A=\u30d5\u30a9\u30fc\u30e0\u3092\u5168\u90e8\u5165\u529b\u3057\uff0c\u4e00\
 info_required_sign=*
 info_required=\u306f\u5fc5\u9808\u60c5\u5831\u3067\u3059\uff0e
 
-search_for_profile = \u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u3092\u691c\u7d22
+search_for_profile = \u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u691c\u7d22
 search=\u691c\u7d22
 search_msg=\u691c\u7d22:
 name_or_network=\u540d\u524d\u307e\u305f\u306f\u30cd\u30c3\u30c8\u30ef\u30fc\u30af ID:
@@ -84,12 +84,12 @@ alt_official_id_photo=\u516c\u5f0f ID \u5199\u771f
 alt_official_id_photo_unavailable=\u516c\u5f0f ID \u5199\u771f\u304c\u5229\u7528\u53ef\u80fd\u3067\u306f\u3042\u308a\u307e\u305b\u3093\uff0e
 alt_picture=\u30e6\u30fc\u30b6\u304c\u9078\u629e\u3057\u305f\u5199\u771f URL
 alt_picture_unavailable=\u5199\u771f\u304c\u5229\u7528\u53ef\u80fd\u3067\u306f\u3042\u308a\u307e\u305b\u3093
-alt_table2summary=\u540d\u5b57\u307e\u305f\u306f\u540d\u524d\u306b\u3088\u308a\u691c\u7d22\u3055\u308c\u305f\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u306e\u8868\u5f62\u5f0f\u8868\u793a
-alt_select10=10\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e
-alt_select20=20\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e
-alt_select30=30\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e
-alt_select40=40\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e
-alt_select50=50\u30a2\u30a4\u30c6\u30e0\u3092\u9078\u629e
+alt_table2summary=\u59d3\u307e\u305f\u306f\u540d\u306b\u3088\u308a\u691c\u7d22\u3055\u308c\u305f\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u306e\u8868\u5f62\u5f0f\u8868\u793a
+alt_select10=10\u30a2\u30a4\u30c6\u30e0\u3092\u8868\u793a
+alt_select20=20\u30a2\u30a4\u30c6\u30e0\u3092\u8868\u793a
+alt_select30=30\u30a2\u30a4\u30c6\u30e0\u3092\u8868\u793a
+alt_select40=40\u30a2\u30a4\u30c6\u30e0\u3092\u8868\u793a
+alt_select50=50\u30a2\u30a4\u30c6\u30e0\u3092\u8868\u793a
 alt_search_result1=\u6700\u521d\u306e\u691c\u7d22\u7d50\u679c\u3092\u8868\u793a
 alt_search_result2=\u524d\u306e\u691c\u7d22\u7d50\u679c\u3092\u8868\u793a
 alt_search_result3=\u30da\u30fc\u30b8\u5f53\u305f\u308a\u306e\u691c\u7d22\u7d50\u679c\u6570\u306e\u9078\u629e
@@ -97,12 +97,12 @@ alt_search_result4=\u6b21\u306e\u691c\u7d22\u7d50\u679c\u3092\u8868\u793a
 alt_search_result5=\u6700\u5f8c\u306e\u691c\u7d22\u7d50\u679c\u3092\u8868\u793a
  
 
-permission_exception=\u81ea\u5206\u306e\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u8868\u793a\u3059\u308b\u5834\u5408\u306f\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u304f\u3060\u3055\u3044
+permission_exception=\u81ea\u5206\u306e\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u3092\u8868\u793a\u3059\u308b\u5834\u5408\u306f\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u304f\u3060\u3055\u3044
 search_table=\u691c\u7d22\u30ea\u30f3\u30af\u3092\u8868\u793a\u3059\u308b\u305f\u3081\u306e\u8868
-display_profile=\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u3092\u8868\u793a
+display_profile=\u30d7\u30ed\u30d5\u30a3\u30fc\u30eb\u3092\u8868\u793a
 
 user_not_logged_in = \u30e6\u30fc\u30b6\u306f\u30ed\u30b0\u30a4\u30f3\u3057\u3066\u3044\u307e\u305b\u3093
-java.search_keyword = \u540d\u5b57\u307e\u305f\u306f ID
+java.search_keyword = \u59d3\u307e\u305f\u306f ID
 
 invalid = \u306f\u7121\u52b9\u3067\u3059\uff0e
 validurl = \u6709\u52b9\u306a URL \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\uff0e
