--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
@@ -1,3 +1,18 @@
+#
+# Copyright (c) 2009 Sakai Foundation
+#
+# Licensed under the Educational Community License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.osedu.org/licenses/ECL-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+# 
 profile = Perfil
 profile_first_name = Nom
 profile_last_name = Cognom
@@ -91,4 +106,5 @@ java.search_keyword = Cognom o identificador
 ########### Revisado por la Universidad Politécnica de Valencia  ######
 invalid = no és vàlid.
 validurl = Per favor, introdueixi una URL vàlida.
-
+error_invalid_email=Error: l'adreça electrònica introduïda no és correcta
+profile_mobile=Telèfon mòbil.
