--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_sv.properties
@@ -1,19 +1,3 @@
-#
-# Copyright (c) 2008 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-
 #Stored by I18NEdit, may be edited!
 alt_official_id_photo=Officiellt fotografi
 alt_official_id_photo_unavailable=Det finns inget officiellt fotografi tillg\u00E4ngligt
@@ -54,12 +38,12 @@ error_empty_first_name=Fel\: Inget f\u00F6rnamn
 error_empty_last_name=Fel\: Inget efternamn
 error_exception_upload=Ett ok\u00E4nt fel intr\u00E4ffade vid uppladdningen.
 error_file_too_large=Vald bild \u00E4r f\u00F6r stor, v\u00E4lj en bild som \u00E4r mindre \u00E4n 1 MB.
-error_filetype_unknown=Fel\: Ok\u00E4nd filtyp f\u00F6r bilden.
+error_filetype_unknown=Fel\: Ok\u00E4nd filtyp.
 error_invalid_email=Fel\: detta \u00E4r ingen giltig e-postadress
 error_msg=Fel\:
 error_no_file_supplied=Fel\: Ingen fil vald vid uppladdningen
 info_A=Fyll i uppgifterna och v\u00E4lj sedan 'Spara' l\u00E4ngst ned. En
-info_required=betyder att f\u00E4ltet \u00E4r obligatoriskt.
+info_required=betyder att f\u00E4ltet \u00E4r obligatoriskt. Notera att du inte kan ändra för-, efternamn samt epost-adress i Mondo. Eftersändning av e-post sköter du från e-post-fliken i 'Mitt universitet'.
 info_required_sign=*
 invalid=\u00E4r ogiltig.
 java.search_keyword=Efternamn eller anv\u00E4ndar-id
