SAK-18246 Catalan translations for 2.7
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@75179 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_ca.properties
@@ -105,6 +105,6 @@ user_not_logged_in = L'usuari no ha accedit al sistema
 java.search_keyword = Cognom o identificador
 ########### Revisado por la Universidad Politécnica de Valencia  ######
 invalid = no és vàlid.
-validurl = Per favor, introdueixi una URL vàlida.
+validurl = Introduïu una URL vàlida.
 error_invalid_email=Error: l'adreça electrònica introduïda no és correcta
 profile_mobile=Telèfon mòbil.
