SAK-22488 updated mn translation
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@111538 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_mn.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_mn.properties
@@ -1,9 +1,9 @@
-###################################
+﻿###################################
 # Translated  by  INTERACTIVE LLC #
 # email: sakaiteam@interactive.mn #
 ###################################
 
-profile=\u0425\u0443\u0432\u0438\u0439\u043D \u0442\u043E\u0445\u0438\u0440\u0433\u043E\u043E,\u043F\u0440\u043E\u0444\u0438\u043B\u044C 
+profile=\u0425\u0443\u0432\u0438\u0439\u043D \u0442\u043E\u0445\u0438\u0440\u0433\u043E\u043E,\u041F\u0440\u043E\u0444\u0430\u0439\u043B
 profile_first_name=\u04E8\u04E9\u0440\u0438\u0439\u043D \u043D\u044D\u0440 
 profile_last_name=\u041E\u0432\u043E\u0433 \u043D\u044D\u0440 
 profile_nick_name=\u0411\u043E\u0433\u0438\u043D\u043E \u043D\u044D\u0440 
@@ -111,3 +111,7 @@ java.search_keyword = \u041E\u0432\u043E\u0433 \u044D\u0441\u0432\u044D\u043B ID
 
 invalid = \u0445\u04AF\u0447\u0438\u043D\u0433\u04AF\u0439 \u0431\u0430\u0439\u043D\u0430.
 validurl = \u0425\u04AF\u0447\u0438\u043D\u0442\u044D\u0439 URL \u043E\u0440\u0443\u0443\u043B\u043D\u0430 \u0443\u0443.
+
+
+
+alt_picture	= \u0425\u044D\u0440\u044D\u0433\u043B\u044D\u0433\u0447 \u0441\u043E\u043D\u0433\u043E\u0441\u043E\u043D url \u0437\u0443\u0440\u0430\u0433 
