SAK-25547 Simplified Chinese translation upadte
git-svn-id: https://source.sakaiproject.org/svn/profile/trunk@134006 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_zh_CN.properties
+++ b/profile-app/src/bundle/org/sakaiproject/tool/profile/bundle/Messages_zh_CN.properties
@@ -33,6 +33,7 @@ edit_pic_preference_univ=\u4F7F\u7528\u5B66\u6821Id\u7167\u7247
 edit_pic_preference_url=\u4F7F\u7528\u7167\u7247\u7684URL\uFF1A
 error_empty_first_name=\u9519\u8BEF\uFF1A\u540D\u5B57\u4E3A\u7A7A
 error_empty_last_name=\u9519\u8BEF\uFF1A\u59D3\u4E3A\u7A7A
+error_invalid_email=\u9519\u8BEF\uFF1Aemail\u5730\u5740\u65E0\u6548
 error_msg=\u9519\u8BEF\uFF1A
 info_A=\u5B8C\u6210\u8868\u683C\u540E\u9009\u62E9\u5E95\u90E8\u7684\u201C\u4FDD\u5B58\u201D\u3002
 info_required=\u8868\u793A\u9700\u8981\u586B\u5199\u7684\u4FE1\u606F
@@ -59,6 +60,7 @@ profile_keep_picture_url=\u56FE\u7247url
 profile_keep_university_id=\u5B66\u6821ID
 profile_last_name=\u540D
 profile_main_title=\u6211\u7684\u8D44\u6599
+profile_mobile=\u624B\u673A
 profile_nick_name=\u6635\u79F0
 profile_other_information=\u5176\u4ED6
 profile_picture=\u7167\u7247
